--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/bootstrap/dist/css/bootstrap.css";
+
+body{
+    font-family: 'Public Sans', sans-serif;
+    min-height: 100vh;
+}
+button{
+    font-family: 'Public Sans', sans-serif;
+}
+:root{
+    --darkBlue: hsl(233, 26%, 24%);
+    --limeGreen: hsl(136, 65%, 51%);
+    --brightCyan: hsl(192, 70%, 51%);
+    --grayBlue: hsl(233, 8%, 62%);
+    --lightGrayBlue: hsl(220, 16%, 96%);
+    --veryLightGray: hsl(0, 0%, 98%);
+    --white: hsl(0, 0%, 100%);
+
+}
+button, a, p, li, ul {
+    font-size: 18px;
+}
