--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,6 +5,7 @@ header{
     z-index: 10;
     padding-top: 1rem;
     padding-bottom: 1rem;
+    transform-style: preserve-3d; /*sets child element behind parent (nav) */
 }
 .button-wrapper{
     display: none;
@@ -14,14 +15,16 @@ header{
 }
 nav{
     position: absolute;
+    background-color: var(--white);
     display: flex;
     flex-direction: column;
     top: -400%;
     left: 2rem;
     right: 2rem;
-    transition: 0.1s;
+    transition: top 0.3s;
     text-align: center;
     z-index: 5;
+    transform: translateZ(-10px); /*sets child element behind parent (header) */
 
 }
 nav[data-open="true"]{
@@ -29,13 +32,13 @@ nav[data-open="true"]{
     border-radius: 5px;
     top: calc(100% + 2rem);
 }
-a{
+.link{
     color: var(--darkBlue);
     text-decoration: none;
     display: block;
     padding: .5rem 0;
 }
-a:focus{
+.link:focus{
     background-color: rgba(0, 0, 0, .05);
 }
 .dark-on-nav-open{
@@ -71,11 +74,17 @@ a:focus{
         white-space: nowrap;
         color: var(--white);
         padding: .5rem 1rem;
-        transition: .3s;
+        transition: opacity .3s;
     }
     button:hover{
         opacity: .7;
         color: var(--white);
+    }
+    button:active{
+        color: var(--white)
+    }
+    .btn:first-child:active{
+        color: var(--white)
     }
     nav{
         position: static;
@@ -85,24 +94,33 @@ a:focus{
         transform: none;
         width: auto;
     }
-    nav > div {
-        padding-bottom: 4px;
-    }
-    nav > div:hover {
-        background: linear-gradient(to right, var(--limeGreen), var(--brightCyan));
-    }
-    a{
+    .link{
         color: var(--grayBlue);
         background-color: var(--white);
-        border-bottom: 3px solid transparent;
         padding: 1rem 0;
+        position: relative;
     }
-    a:hover{
+    .link::after{ /*colorful bar on hover */
+        content: "";
+        width: 100%;
+        height: 4px;
+        background: linear-gradient(to right, var(--limeGreen), var(--brightCyan));
+        position: absolute;
+        bottom: 0;
+        right: 50%;
+        transform: translateX(50%);
+        opacity: 0;
+        transition: opacity .3s;
+    }
+    .link:hover{
         color: var(--darkBlue);
-        border-bottom: 3px solid linear-gradient(right, red, yellow);
     }
-    a:focus{
-        background-color: initial;
+    .link:focus{
+        background-color: var(--white);
+    }
+    .link:hover::after{
+        background: linear-gradient(to right, var(--limeGreen), var(--brightCyan));
+        opacity: 1;
     }
     .dark-on-nav-open{
         display: none;
