--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -1,11 +1,11 @@
 <div class="background-container">
     <img src="assets/images/image-mockups.png">
 </div>
-<main class="container p-4 d-flex flex-column align-items-center justify-content-center">
+<main>
     <h1>Next generation digital banking</h1>
-    <p>Take your financial life online.
+    <p class="my-4">Take your financial life online.
     Your Easybank account will be a one-stop-shop for spending,
     saving, budgeting, investing, and much more.
     </p>
-    <button class="btn">Request Invite</button>
+    <button>Request Invite</button>
 </main>
