--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     <button (click)="isOpen()" class="hamburger-container">
         <img class="hamburger" [src]="hamburgerOrClose" alt="hamburger">
     </button>
-    <nav [attr.data-open]="open" (click)="isOpen()">
+    <nav [attr.data-open]="open" (click)="isOpen()" aria-label="primary">
         <a class="link" href="#">Home</a>
         <a class="link" href="#">About</a>
         <a class="link" href="#">Contact</a>
@@ -13,7 +13,7 @@
         <a class="link" href="#">Careers</a>
     </nav>
     <div class="button-wrapper">
-        <button>Request Invite</button>
+        <app-button>Request Invite</app-button>
     </div>
 </header>
 <div *ngIf="open" (click)="isOpen()" class="dark-on-nav-open"></div>
