--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,12 +12,16 @@
         </div>
     </div>
     <nav aria-label="secondary">
-        <a class="link" href="#">About Us</a>
-        <a class="link" href="#">Contact</a>
-        <a class="link" href="#">Blog</a>
-        <a class="link" href="#">Careers</a>
-        <a class="link" href="#">Support</a>
-        <a class="link" href="#">Privacy Policy</a>
+        <div class="first-col">
+            <a class="link" href="#">About Us</a>
+            <a class="link" href="#">Contact</a>
+            <a class="link" href="#">Blog</a>
+        </div>
+        <div class="second-col">
+            <a class="link" href="#">Careers</a>
+            <a class="link" href="#">Support</a>
+            <a class="link" href="#">Privacy Policy</a>
+        </div>
     </nav>
     <div class="button-with-rights">
         <app-button>Request Invite</app-button>
