--- a/src/app/home/articles/articles.component.css
+++ b/src/app/home/articles/articles.component.css
@@ -18,6 +18,12 @@ article{
     border-radius: .5rem;
     background-color: var(--white);
 }
+article:hover h2{
+    color: var(--limeGreen);
+}
+a{
+    text-decoration: none;
+}
 img{
     width: 100%;
     object-fit: cover;
@@ -30,9 +36,6 @@ img{
     display: block;
     text-decoration: none;
 }
-.content:hover h2{
-    color: var(--limeGreen);
-}
 small{
     font-size: 10px;
     color: var(--grayBlue)
@@ -40,7 +43,7 @@ small{
 h2{
     color: var(--darkBlue);
     margin: .5rem 0;
-    font-size: 16px;
+    font-size: 17px;
     transition: color .3s;
 }
 p{
