--- a/src/app/home/articles/articles.component.html
+++ b/src/app/home/articles/articles.component.html
@@ -1,11 +1,13 @@
 <h1>Latest Atricles</h1>
 <div class="articles">
     <article *ngFor="let item of articles">
-        <img [src]="item.img" alt="item">
-        <a class="content" href="#">
-            <small>By {{item.author}}</small>
-            <h2>{{item.heading}}</h2>
-            <p>{{item.paragraph}}</p>
+        <a href="#">
+            <img [src]="item.img" alt="item">
+            <div class="content">
+                <small>By {{item.author}}</small>
+                <h2>{{item.heading}}</h2>
+                <p>{{item.paragraph}}</p>
+            </div>
         </a>
     </article>
 </div>
