--- a/src/app/shared/button/button.component.css
+++ b/src/app/shared/button/button.component.css
@@ -1,4 +1,5 @@
 button{
+    position: relative;
     background-image: linear-gradient(to right, var(--limeGreen), var(--brightCyan));
     border: none;
     font-size: 14px;
@@ -6,10 +7,20 @@ button{
     white-space: nowrap;
     color: var(--white);
     padding: .65rem 2rem;
-    transition: opacity .3s;
     font-weight: 700;
 }
-button:hover{
-    opacity: .7;
-    color: var(--white);
+button::after{
+    content: "";
+    width: 100%;
+    height: 100%;
+    right:0;
+    top: 0;
+    border-radius: 25px;
+    background-color: rgba(255, 255, 255, 0);
+    position: absolute;
+    transition: background-color .3s;
+}
+button:hover::after{
+    background-color: rgba(255, 255, 255, .3);
+
 }
