--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,13 @@
 <header class="container-fluid px-4 d-flex">
     <div class="logo-container">
-        <a href="#"><img class="logo" src="assets/images/logo.svg" alt="easybank logo"></a>
+        <a routerLink="/"><logo-icon></logo-icon></a>
     </div>
     <button (click)="isOpen()" class="hamburger-container">
         <img class="hamburger" [src]="hamburgerOrClose" alt="hamburger">
     </button>
     <nav [attr.data-open]="open" (click)="isOpen()" aria-label="primary">
-        <a class="link" href="#">Home</a>
-        <a class="link" href="#">About</a>
+        <a class="link" routerLink="/">Home</a>
+        <a class="link" routerLink="/about">About</a>
         <a class="link" href="#">Contact</a>
         <a class="link" href="#">Blog</a>
         <a class="link" href="#">Careers</a>
