contact development start

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -14,7 +14,7 @@
     <nav aria-label="secondary">
         <div class="first-col">
             <a class="link" routerLink="/about">About Us</a>
-            <a class="link" href="#">Contact</a>
+            <a class="link" routerLink="/contact">Contact</a>
             <a class="link" href="#">Blog</a>
         </div>
         <div class="second-col">
