--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -59,6 +59,9 @@ nav[data-open="true"]{
     background-image: linear-gradient(to bottom, var(--darkBlue), rgba(255,255,255,0));
     z-index: 5;
 }
+.active{
+    background-color: rgba(0, 0, 0, .05);
+}
 @media screen and (min-width:575px) {
     header{
         justify-content: space-evenly;
@@ -114,5 +117,8 @@ nav[data-open="true"]{
     }
     .dark-on-nav-open{
         display: none;
+    }
+    .active{
+        color: var(--darkBlue);
     }
 }
