--- a/src/app/contact/contact-home/contact-home.component.html
+++ b/src/app/contact/contact-home/contact-home.component.html
@@ -1,2 +1,5 @@
 <app-heading-divider title="Contact"></app-heading-divider>
-<app-options></app-options>
+<div class="contact">
+    <app-options></app-options>
+    <app-contact-form></app-contact-form>
+</div>
