--- a/src/app/shared/heading-divider/heading-divider.component.css
+++ b/src/app/shared/heading-divider/heading-divider.component.css
@@ -10,9 +10,14 @@ section::after{
     width: 100%;
 }
 h1{
-    font-size: 32px;
+    font-size: 36px;
     text-align: center;
     padding: 1.5rem;
     margin: 0;
     color: var(--darkBlue);
+}
+@media screen and (min-width: 575px) {
+    h1{
+        font-size: 40px;
+    }
 }
