started devekoping invite

--- a/src/app/contact/contact-form/contact-form.component.css
+++ b/src/app/contact/contact-form/contact-form.component.css
@@ -13,7 +13,7 @@ textarea.ng-invalid.ng-touched{
 form{
     background-color: var(--veryLightGray);
     padding: 1.5rem;
-    margin: 1.5rem;
+    margin: 1.5rem 1.5rem 3rem 1.5rem;
     border-radius: 20px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
