--- a/src/app/contact/options/options.component.html
+++ b/src/app/contact/options/options.component.html
@@ -1,17 +1,17 @@
 <section>
     <h2>Get in touch with us</h2>
     <div class="contact-options">
-        <a href="mailto:scharnoui@gmail.com">
+        <a href="mailto:info@easybank.com">
             <img src="assets/images/email_blue.svg">
-            <span>scharnoui@gmail.com</span>
+            <span>info@easybank.com</span>
         </a>
-        <a href="tel:01628710079">
+        <a href="tel:01628719979">
             <img src="assets/images/phone_blue.svg">
-            <span>+49 162 8710-079</span>
+            <span>+49 162 8719-979</span>
         </a>
-        <a href="https://goo.gl/maps/DG9pAcG1Tm6A8DFS8" target="_blank">
+        <a href="https://goo.gl/maps/d7xF26xmVndJLaC68" target="_blank">
             <img src="assets/images/pin_blue.svg">
-            <span>Stauffenbergstraße 25, 99427 Weimar</span>
+            <span>Belvederer Allee 25, 99423 Weimar</span>
         </a>
     </div>
 </section>
