--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -24,7 +24,7 @@
         </div>
     </nav>
     <div class="button-with-rights">
-        <app-button>Request Invite</app-button>
+        <app-button (click)="invite()">Request Invite</app-button>
         <p>© Easybank. All Rights Reserved</p>
     </div>
 </footer>
