--- a/src/app/home/components/hero/hero.component.html
+++ b/src/app/home/components/hero/hero.component.html
@@ -7,5 +7,5 @@
     Your Easybank account will be a one-stop-shop for spending,
     saving, budgeting, investing, and much more.
     </p>
-    <app-button>Request Invite</app-button>
+    <app-button (click)="invite()">Request Invite</app-button>
 </main>
