--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
         <a class="link" href="#">Careers</a>
     </nav>
     <div class="button-wrapper">
-        <app-button>Request Invite</app-button>
+        <app-button (click)="invite()">Request Invite</app-button>
     </div>
 </header>
 <div *ngIf="open" (click)="isOpen()" class="dark-on-nav-open"></div>
