--- a/src/app/invite/invite-component/invite.component.html
+++ b/src/app/invite/invite-component/invite.component.html
@@ -1,10 +1,19 @@
 <div class="invite" (click)="hideInvite()">
-    <form (click)="$event.stopPropagation()" class="inner-container">
-        <img (click)="hideInvite()" src="assets/images/icon-close.svg" alt="close"/>
-        <div class="email-container">
-            <label for="email">Enter your e-mail address:</label>
-            <input type="email" id="email">
+    <div class="inner-container">
+        <form (ngSubmit)="save()" [formGroup]="inviteForm" (click)="$event.stopPropagation()">
+            <img (click)="hideInvite()" src="assets/images/icon-close.svg" alt="close"/>
+            <div *ngIf="!isValid" class="email-container">
+                <label for="email">Enter your e-mail address:</label>
+                <input formControlName="email" type="email" id="email">
+                <div class="invalid" style="margin:.5rem" *ngIf="email.invalid && email.touched">
+                    Invalid e-mail
+                </div>
+            </div>
+            <app-button *ngIf="!isValid">Request Invite</app-button>
+        </form>
+        <div *ngIf="isValid" class="correctSubmit">
+            <p >Thank you for your interest. We will be in touch with you soon.</p>
+            <app-button (click)="hideInvite()" style="float: right;">Close</app-button>
         </div>
-        <app-button>Request Invite</app-button>
-    </form>
+    </div>
 </div>
