added careers page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,10 +15,10 @@
         <div class="first-col">
             <a class="link" routerLink="/about">About Us</a>
             <a class="link" routerLink="/contact">Contact</a>
-            <a class="link" href="#">Blog</a>
+            <a class="link" href="https://webentwickler-arnold.eu" target="_blank">Blog</a>
         </div>
         <div class="second-col">
-            <a class="link" href="#">Careers</a>
+            <a class="link" routerLink="/careers">Careers</a>
             <a class="link" href="#">Support</a>
             <a class="link" href="#">Privacy Policy</a>
         </div>
