--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,8 +9,8 @@
         <a class="link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Home</a>
         <a class="link" routerLink="/about" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">About</a>
         <a class="link" routerLink="/contact" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Contact</a>
-        <a class="link" href="#">Blog</a>
-        <a class="link" href="#">Careers</a>
+        <a class="link" href="https://webentwickler-arnold.eu" target="_blank">Blog</a>
+        <a class="link" routerLink="/careers" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Careers</a>
     </nav>
     <div class="button-wrapper">
         <app-button (click)="invite()">Request Invite</app-button>
