--- a/src/app/careers/work-with-us/work-with-us.component.html
+++ b/src/app/careers/work-with-us/work-with-us.component.html
@@ -1,4 +1,4 @@
-<img src="assets/images/job-hunting.png">
+<img src="assets/images/job-hunting.png" alt="job-hunt">
 <section>
     <h2>Work with us</h2>
     <p>
@@ -7,5 +7,5 @@
         more productive
     </p>
     <a [routerLink]="['/careers']" fragment="jobs"><app-button style="display: block;">View Jobs</app-button></a>
-    <a href="#">Looking for internships?</a>
+    <a href="javascript:void(0);">Looking for internships?</a>
 </section>
