--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -19,8 +19,8 @@
         </div>
         <div class="second-col">
             <a class="link" routerLink="/careers">Careers</a>
-            <a class="link" href="#">Support</a>
-            <a class="link" href="#">Privacy Policy</a>
+            <a class="link" routerLink="/support">Support</a>
+            <a class="link" routerLink="/privacy">Privacy Policy</a>
         </div>
     </nav>
     <div class="button-with-rights">
