--- a/src/app/home/components/articles/articles.component.html
+++ b/src/app/home/components/articles/articles.component.html
@@ -1,7 +1,7 @@
 <h1>Latest Atricles</h1>
 <div class="articles">
     <article *ngFor="let item of articles">
-        <a href="#">
+        <a href="javascript:void(0);">
             <img [src]="item.img" alt="item">
             <div class="content">
                 <small>By {{item.author}}</small>
