--- a/src/app/careers/jobs/jobs.component.css
+++ b/src/app/careers/jobs/jobs.component.css
@@ -34,7 +34,35 @@ h3{
 p{
     color: var(--grayBlue);
 }
-
+/*SKELETON LOADING */
+.skeleton {
+    animation: skeleton-loading 1s linear infinite alternate;
+  }
+  
+  @keyframes skeleton-loading {
+    0% {
+      background-color: hsl(200, 20%, 80%);
+    }
+    100% {
+      background-color: hsl(200, 20%, 95%);
+    }
+  }
+  
+  .skeleton-body{
+    width: 100%;
+    background-color: var(--white);
+    margin: 2rem 0;
+    padding: 1rem;
+    border-radius: 15px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  }
+  .skeleton-text {
+    width: 100%;
+    height: 0.8rem;
+    margin-bottom: 0.75rem;
+    border-radius: 0.25rem;
+  }
+  /*SKELETON LOADING END */
 @media screen and (min-width: 575px) {
     :host{
         padding: 5rem;
@@ -51,8 +79,14 @@ p{
         justify-content: space-evenly;
     }
     .job{
-        max-width: 500px;
+        width: 500px;
         margin: 0;
     }
 
+    /*SKELETON LOADING */
+    .skeleton-body{
+        width: 500px;
+        margin: 0;
+    }
 }
+
