--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,14 @@
 <footer>
     <div class="logo-with-icons">
         <div class="logo-container">
-            <a href="#"><logo-icon color="white"></logo-icon></a>
+            <a href="#" aria-label="To the top of the homepage."><logo-icon color="white"></logo-icon></a>
         </div>
         <div class="icons">
-            <a href="https://facebook.com" target="_blank"><facebook-icon></facebook-icon></a>
-            <a href="https://youtube.com" target="_blank"><youtube-icon></youtube-icon></a>
-            <a href="https://twitter.com" target="_blank"><twitter-icon></twitter-icon></a>
-            <a href="https://pinterest.com" target="_blank"><pinterest-icon></pinterest-icon></a>
-            <a href="https://instagram.com" target="_blank"><instagram-icon></instagram-icon></a>
+            <a aria-label="To the facebook website" href="https://facebook.com" target="_blank"><facebook-icon></facebook-icon></a>
+            <a aria-label="To the youtube website" href="https://youtube.com" target="_blank"><youtube-icon></youtube-icon></a>
+            <a aria-label="To the twitter website" href="https://twitter.com" target="_blank"><twitter-icon></twitter-icon></a>
+            <a aria-label="To the fpinterest website" href="https://pinterest.com" target="_blank"><pinterest-icon></pinterest-icon></a>
+            <a aria-label="To the instagram website" href="https://instagram.com" target="_blank"><instagram-icon></instagram-icon></a>
         </div>
     </div>
     <nav aria-label="secondary">
