--- a/src/app/home/components/hero/hero.component.html
+++ b/src/app/home/components/hero/hero.component.html
@@ -1,5 +1,5 @@
 <div class="background-container">
-    <img src="assets/images/image-mockups.png">
+    <img src="assets/images/image-mockups.png" alt="easybank-on-mobile">
 </div>
 <main>
     <h1>Next generation digital banking</h1>
