--- a/src/app/contact/contact-form/contact-form.component.html
+++ b/src/app/contact/contact-form/contact-form.component.html
@@ -36,6 +36,6 @@
         Message should be at least 10 characters.
     </div>
     <p *ngIf="invalidSubmit" class="invalid">ERROR, please fill out all the fields with the correct information!</p>
-    <button>Send Message</button>
+    <app-button>Send Message</app-button>
 </form>
 <h1 *ngIf="validSubmit" style="text-align: center; margin:3rem 3rem 30rem 3rem">Your message has been delivered!</h1>
