finished blog page

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
     <div class="logo-with-icons">
         <div class="logo-container">
-            <a href="#" aria-label="To the top of the homepage."><logo-icon color="white"></logo-icon></a>
+            <a routerLink="/" aria-label="To the top of the homepage."><logo-icon color="white"></logo-icon></a>
         </div>
         <div class="icons">
             <a aria-label="To the facebook website" href="https://facebook.com" target="_blank"><facebook-icon></facebook-icon></a>
@@ -15,7 +15,7 @@
         <div class="first-col">
             <a class="link" routerLink="/about">About Us</a>
             <a class="link" routerLink="/contact">Contact</a>
-            <a class="link" href="https://webentwickler-arnold.eu" target="_blank">Blog</a>
+            <a class="link" routerLink="/blog">Blog</a>
         </div>
         <div class="second-col">
             <a class="link" routerLink="/careers">Careers</a>
