--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
         <a class="link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" aria-label="To the home page">Home</a>
         <a class="link" routerLink="/about" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" aria-label="To the about page">About</a>
         <a class="link" routerLink="/contact" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" aria-label="To the contact page">Contact</a>
-        <a class="link" href="https://webentwickler-arnold.eu" target="_blank" aria-label="To my portfolio website">Blog</a>
+        <a class="link" routerLink="/blog" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" aria-label="To the blog page">Blog</a>
         <a class="link" routerLink="/careers" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" aria-label="To the careers page">Careers</a>
     </nav>
     <div class="button-wrapper">
