--- a/src/app/careers/work-with-us/work-with-us.component.css
+++ b/src/app/careers/work-with-us/work-with-us.component.css
@@ -28,6 +28,7 @@ a{
         justify-content:space-evenly;
         align-items: center;
         gap: 1rem;
+        padding: 5rem;
     }
     section{
         text-align: start;
