--- a/src/app/blog/posts/posts.component.css
+++ b/src/app/blog/posts/posts.component.css
@@ -27,55 +27,16 @@ a{
 }
 
 
-/*Loading animation*/
-.loading{
-    height: 60vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-.lds-ring {
-    display: inline-block;
-    position: relative;
-    width: 80px;
-    height: 80px;
-  }
-  .lds-ring div {
-    box-sizing: border-box;
-    display: block;
-    position: absolute;
-    width: 64px;
-    height: 64px;
-    margin: 8px;
-    border: 8px solid var(--limeGreen);
-    border-radius: 50%;
-    animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
-    border-color: var(--limeGreen) transparent transparent transparent;
-  }
-  .lds-ring div:nth-child(1) {
-    animation-delay: -0.45s;
-  }
-  .lds-ring div:nth-child(2) {
-    animation-delay: -0.3s;
-  }
-  .lds-ring div:nth-child(3) {
-    animation-delay: -0.15s;
-  }
-  @keyframes lds-ring {
-    0% {
-      transform: rotate(0deg);
-    }
-    100% {
-      transform: rotate(360deg);
-    }
-  }
-
   @media screen and (min-width:575px) {
     :host{
         margin: 2rem 5rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .post{
-      padding: 5rem
+      padding: 5rem;
+      max-width: 800px;
     }
     h2{
         font-size: 32px;
@@ -89,16 +50,5 @@ a{
       max-width: 80%;
       margin: 3rem auto 0 auto;
     }
-    /*Loading animation*/
-    .lds-ring {
-        width: 160px;
-        height: 160px;
-    }
-    .lds-ring div {
-        width: 128px;
-        height: 128px;
-        margin: 16px;
-        border: 16px solid var(--limeGreen);
-        border-color: var(--limeGreen) transparent transparent transparent;
-    }
+
 }
