--- a/src/app/about/introduction/introduction.component.html
+++ b/src/app/about/introduction/introduction.component.html
@@ -1,4 +1,4 @@
-<main>
+<section>
     <div class="paragraph-container">
         <span class="quote-top">“</span>
         <p>At Easybank, we understand that the world of finance can be complex and overwhelming, which is why we are focused on providing
@@ -11,4 +11,4 @@
         <img src="assets/images/ceo.jpg" alt="unsplash.com/@shipnorth">
         <p class="name">John Doe</p><small>CEO</small>
     </div>
-</main>
+</section>
