--- a/src/app/careers/work-with-us/work-with-us.component.html
+++ b/src/app/careers/work-with-us/work-with-us.component.html
@@ -6,6 +6,6 @@
         our mission to make work life simpler, more pleasant and
         more productive
     </p>
-    <a [routerLink]="['/careers']" fragment="jobs"><app-button style="display: block;">View Jobs</app-button></a>
-    <a href="javascript:void(0);">Looking for internships?</a>
+    <a class="view-jobs-btn" [routerLink]="['/careers']" fragment="jobs"><app-button>View Jobs</app-button></a>
+    <a class="internship-anchor" routerLink="/careers" fragment="internship">Looking for internships?</a>
 </section>
