--- a/src/app/contact/options/options.component.html
+++ b/src/app/contact/options/options.component.html
@@ -1,6 +1,6 @@
 <section>
     <h2>Get in touch with us</h2>
-    <div class="contact-options">
+    <address class="contact-options">
         <a href="mailto:info@easybank.com">
             <img src="assets/images/email_blue.svg">
             <span>info@easybank.com</span>
@@ -13,5 +13,5 @@
             <img src="assets/images/pin_blue.svg">
             <span>Belvederer Allee 25, 99423 Weimar</span>
         </a>
-    </div>
+    </address>
 </section>
