--- a/src/app/careers/careers-home/careers-home.component.html
+++ b/src/app/careers/careers-home/careers-home.component.html
@@ -1,3 +1,4 @@
 <app-heading-divider title="Careers"></app-heading-divider>
 <app-work-with-us></app-work-with-us>
 <app-jobs></app-jobs>
+<app-internship></app-internship>
