--- a/src/app/careers/internship/internship.component.css
+++ b/src/app/careers/internship/internship.component.css
@@ -1,52 +1,53 @@
 :host{
     display: block;
     padding: 1.5rem;
-}
-img{
-    width: 100%;
-    height: auto;
-}
-section{
-    text-align: center;
+    background-color: var(--veryLightGray);
 }
 h2{
     font-size: 30px;
     color: var(--darkBlue);
-}
-p{
-    color: var(--grayBlue);
-}
-.view-jobs-btn{
-    width:fit-content;
-}
-.internship-anchor{
-    display: block;
-    color: var(--brightCyan);
-    transition: color .3s;
-    padding: 1rem 0;
-    width: 100%;
-}
-.internship-anchor:hover{
-    color: var(--limeGreen);
+    text-align: center;
 }
 
-@media screen and (min-width: 575px){
+img{
+    height: auto;
+    width: 100%;
+}
+
+p{
+    color:var(--grayBlue);
+}
+.content{
+    text-align: center;
+}
+.apply{
+    display: block;
+    width: 100%;
+    margin: 2rem 0;
+}
+@media screen and (min-width:575px){
     :host{
+        padding: 5rem;
+    }
+    h2{
+        text-align: start;
+        padding-bottom: 2rem;
+    }
+    .img-with-content{
         display: flex;
         flex-direction: row-reverse;
         justify-content:space-evenly;
         align-items: center;
         gap: 1rem;
-        padding: 5rem;
     }
-    section{
+    .content{
         text-align: start;
         max-width: 500px;
     }
     img{
         max-width: 500px;
     }
-    .internship-anchor{
+    .apply{
         width: fit-content;
     }
 }
