--- a/src/app/careers/jobs/jobs.component.html
+++ b/src/app/careers/jobs/jobs.component.html
@@ -1,7 +1,7 @@
 <h2>Join us</h2>
 <div id="jobs" class="jobs-container">
     <ng-container *ngIf="listjobs">
-        <a *ngFor="let i of listjobs" href="{{i.redirect_url}}" target="_blank" class="job">
+        <a *ngFor="let i of listjobs" href="{{i.redirect_url}}" target="_blank" class="job" aria-label="Read more about the job">
             <h3>{{i.title}}</h3>
             <p>{{i.location.area[3] || i.location.area[2]}}, {{i.location.area[1]}}, {{i.location.area[0]}}</p>
         </a>
