--- a/src/app/home/components/articles/articles.component.html
+++ b/src/app/home/components/articles/articles.component.html
@@ -1,5 +1,5 @@
 <h1>Latest Atricles</h1>
-<div class="articles">
+<section class="articles">
     <article *ngFor="let item of articles">
         <a href="javascript:void(0);">
             <img [src]="item.img" alt="item">
@@ -10,4 +10,4 @@
             </div>
         </a>
     </article>
-</div>
+</section>
