--- a/src/app/careers/internship/internship.component.html
+++ b/src/app/careers/internship/internship.component.html
@@ -1,7 +1,7 @@
-<div class="img-with-content">
+<div id="internship" class="img-with-content">
     <img src="assets/images/internship.png" alt="interns">
     <div class="content">
-        <h2 id="internship">Internship Program</h2>
+        <h2>Internship Program</h2>
         <p>
             Our internship program at Easybank provides an opportunity for students and recent graduates to gain practical experience and develop their skills in the banking industry.
         </p>
