--- a/src/app/blog/posts/posts.component.html
+++ b/src/app/blog/posts/posts.component.html
@@ -1,17 +1,14 @@
-<ng-container *ngIf="posts">
-    <article *ngFor="let post of posts; index as i" class="post" id="post{{i+1}}">
+<ng-container *ngIf="posts$ | async">
+    <article *ngFor="let post of posts$ | async; index as i" class="post" id="post{{i+1}}">
         <h2>{{post.title}}</h2>
         <small>{{post.author}}</small>
-        <p style="white-space: pre-wrap;" class="content">
+        <blockquote style="white-space: pre-wrap;" class="content">
             {{post.text}}
-        </p>
+        </blockquote>
         <div class="source">
-            <span>Source: </span><a href="{{post.url}}" target="_blank" aria-label="To the source of the article.">{{post.url}}</a>
+            <span>Source: </span><cite><a href="{{post.url}}" target="_blank" aria-label="To the source of the article.">{{post.url}}</a></cite>
         </div>
     </article>
 </ng-container>
 
-<div *ngIf="!posts" class="loading">
-    <div class="lds-ring"><div></div><div></div><div></div><div></div></div>
-</div>
 
