--- a/src/app/about/introduction/introduction.component.html
+++ b/src/app/about/introduction/introduction.component.html
@@ -1,10 +1,10 @@
 <section>
     <div class="paragraph-container">
         <span class="quote-top">“</span>
-        <q>At Easybank, we understand that the world of finance can be complex and overwhelming, which is why we are focused on providing
+        <p>At Easybank, we understand that the world of finance can be complex and overwhelming, which is why we are focused on providing
             financial solutions that are straightforward and easy to understand. Whether you are looking for a savings account, a mortgage,
             or a loan, our knowledgeable staff is here to help you achieve your financial goals.
-        </q>
+        </p>
         <span class="quote-bottom">”</span>
     </div>
     <div class="img-with-name">
